--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 Включение всех деталей, таких как форматы запросов и ответов API, а также алгоритмы обработки данных, критически важно для успешного функционирования приложения.
 Это поможет в будущем чату и разработчику правильно и эффективно воспринимать информацию.
 —----------------------------
-
+<img src="Shema.jpg" alt="Описание картинки" />
 
 Архитектура проекта
 Компоненты системы:
