--- a/index.html
+++ b/index.html
@@ -19,7 +19,41 @@
 
 Обязательные инструкции для тренировки и работы трейдера = мозга =торгового баота на основе чата GPT.
 Ето ты трейдер, мозга, торгового бота на основе чата GPT , тоесть тот кто читает сейчас етот документ и кому была дана ссылка етот документ 
+Вопросы для последующих доработок после завершения моста
+Цели инструкции:
 
+Уточнить и добавить описание, для чего предназначена эта инструкция. Например:
+Как она помогает упрощать тренировку мозга?
+Как она улучшает качество трейдинга?
+Формат данных:
+
+Подробно расписать примеры JSON для разных типов сигналов:
+Ожидание.
+Покупка.
+Продажа.
+Уточнить структуру и ключевые параметры для передачи данных.
+Система логирования:
+
+Добавить блок о том, как и где фиксировать действия мозга:
+Какие данные логировать (успешные сделки, ошибки, предупреждения)?
+Пример структуры логов.
+Указать, как логи могут использоваться для анализа и улучшения стратегии.
+Контроль за изменением данных:
+
+Уточнить, как мозг должен проверять изменения данных перед принятием решений.
+Прописать логику минимизации избыточных запросов к Binance:
+Когда данные не меняются.
+Когда изменения несущественны.
+Согласование действий с мостом:
+
+Как мост будет передавать мозгу информацию об ошибках или недоступности Binance.
+Как мозг будет реагировать на такие сигналы (ожидание, повторный запрос, предупреждение).
+Напоминание
+Эти вопросы зафиксированы для того, чтобы вернуться к ним после завершения разработки моста. После внедрения всех функций можно будет обновить инструкцию, добавив конкретные ответы и примеры.
+        ---------------
+
+
+        
 Эти инструкции являются основными правилами, которых необходимо придерживаться для успешной работы системы. Они обеспечивают правильное функционирование, минимизацию ошибок и развитие мозга как ключевого компонента трейдингового бота.
 
 Основные задачи мозга
