--- a/index3.html
+++ b/index3.html
@@ -34,7 +34,7 @@
 Включение всех деталей, таких как форматы запросов и ответов API, а также алгоритмы обработки данных, критически важно для успешного функционирования приложения.
 Это поможет в будущем чату и разработчику правильно и эффективно воспринимать информацию.
 —----------------------------
-<img src="Shema.jpg" alt="Описание картинки" />
+<img src="WEB bridge.jpg" alt="Описание картинки" />
 
 Архитектура проекта
 Компоненты системы:
@@ -465,7 +465,76 @@ Reddit/Twitter: Мониторинг трендов.
 Текущие задачи: Рефакторинг кода для упрощения.
 Будущие шаги: Добавление новых функций и обработка запросов.
 Результат работы: Готовность к следующему этапу разработки.
-
+Взаимодействие с браузером: Упор на подключение к существующему браузеру для минимизации нагрузки на систему.
+Ручное управление браузером: Пользователь вручную запускает Chrome и открывает нужный сайт.
+Цель текущего этапа: Убедиться в стабильности работы через debuggerAddress.
+Фиксация порта: Используется стандартный порт 9222 для отладки и соединения.
+Проблемы с драйвером: Обнаружены ошибки при подключении к занятым портам.
+Метод IsPortAvailable: Проверяет доступность порта перед подключением.
+Фокус команды: Исключить автоматическое открытие браузера из кода.
+Обновление ChromeDriver: Постоянная проверка актуальности драйвера.
+Архитектура модуля: Разделение логики подключения, управления и завершения соединения.
+Сокращение ошибок: Использование логирования для детального анализа проблем.
+Общение команды: Постоянный обмен мнениями о возможных улучшениях.
+Добавление логов: Уведомления о статусе подключения и завершения сессии.
+Тестирование методов: Проведение проверки после каждого изменения в коде.
+Разделение задач: Отдельные методы для подключения, проверки порта и завершения работы.
+Цель рефакторинга: Упрощение структуры методов для легкости тестирования.
+Настройка параметров Chrome: Использование минимального набора аргументов.
+Оптимизация логов: Добавление сообщений об успехе и ошибках на каждом этапе.
+Восстановление сессий: Проверка существующей сессии перед созданием новой.
+Проблемы с доступностью порта: Решены с использованием метода IsPortAvailable.
+Команда подтвердила решение: Работать с существующим браузером.
+Ручная отладка: Использование фиксированного порта для снижения вероятности ошибок.
+Проверка подключения: Каждый шаг подтверждается логами.
+Настройка ChromeOptions: Указание пути к пользовательским данным вручную.
+Обновление методов: Методы ConnectToExistingBrowser и CloseConnection отлажены.
+Фиксация порта 9222: Установлен как стандартный для всех тестов.
+Кодовая структура: Организация методов в одном классе для удобства.
+Сокращение сложностей: Упрощение логики подключения через debuggerAddress.
+Команда согласовала задачи: Разработка ведется по шагам.
+Текущие результаты: Подключение успешно выполняется через отладочный адрес.
+Логирование ошибок: Добавление детальных уведомлений об исключениях.
+Вопросы команды: Обсуждение необходимости дальнейшего рефакторинга.
+Настройка сессий: Проверка на наличие существующих сессий перед запуском.
+Использование порта: Оптимизация процесса проверки и закрепления порта.
+Динамическое подключение: Установлен подход для проверки доступности браузера.
+Проверка соединения: Уведомления о статусе браузера и драйвера.
+Стабильная работа: Основной фокус на устранении ошибок подключения.
+Методы логирования: Использование готовых классов для записи логов.
+Принятые решения: Обеспечить стабильное подключение к открытому браузеру.
+Работа с исключениями: Каждый метод обернут в блоки try-catch.
+Фиксация успехов: Логи сообщают о каждом успешном подключении.
+Настройка пользовательских данных: Указание пути к профилю Chrome.
+Ручное тестирование: Проверка каждого этапа вручную.
+Итеративный подход: Частые проверки после каждого изменения.
+Методы модуля: Реализованы ConnectToExistingBrowser, CloseConnection.
+Цель команды: Достичь полной стабильности подключения.
+Архитектура логики: Подключение, проверка и завершение работы разделены.
+Согласование с командой: Подтверждены дальнейшие шаги.
+Ручной контроль браузера: Принято решение отказаться от автоматизации запуска.
+Обсуждение ошибок: Команда анализирует каждый сбой в логах.
+Работа с портами: Настройка порта как ключевого параметра.
+Цель текущего шага: Полностью устранить ошибки сессий.
+Методы обработки портов: Проверка и установка только доступных портов.
+Согласование изменений: Все шаги подтверждаются командой.
+Итерации логики: Тестирование подключения в разных условиях.
+Логи о сессиях: Добавление сообщений о существующих сессиях.
+Вопросы команды: Возможности добавления новых функций.
+Работа с драйвером: Поддержка актуальных версий ChromeDriver.
+Подключение к открытому браузеру: Принятое решение об отказе от автоматизации.
+Отладка проекта: Уведомления показывают статус каждого этапа.
+Настройка параметров Chrome: Минимизация аргументов в ChromeOptions.
+Ручная отладка порта: Использование 9222 как стандартного.
+Детализация задач: Подготовка шагов для новых функций.
+Логирование работы: Каждый шаг фиксируется в логах.
+Обновление методов: Упрощение входных данных в ConnectToExistingBrowser.
+Работа команды: Анализ логов и ошибок.
+Результаты тестов: Успешное подключение через debuggerAddress.
+Минимизация кода: Удалены избыточные проверки и параметры.
+Подключение через отладочный адрес: Главное решение текущей задачи.
+Фокус на стабильности: Главная цель команды — минимизировать сбои.
+Готовность к следующему шагу: Проект готов для дальнейшей разработки.
 
  
 
