--- a/index3.html
+++ b/index3.html
@@ -36,6 +36,21 @@
 —----------------------------
 <img src="WEB bridge.jpg" alt="Описание картинки" />
 
+Общий подход ка пишем программу:
+Разделение задач на микро-шаги:
+Каждая задача делится на подзадачи.
+Проверка результата после выполнения каждой подзадачи.
+Микро-микро-шаги:
+Минимальные действия, которые можно выполнить за 5–15 минут.
+Например: "Подключить Selenium к существующему браузеру" делится на:
+Указать путь к профилю Chrome.
+Проверить порт дебаггера.
+Написать метод подключения.
+Постоянное тестирование:
+После каждого этапа тестировать новый функционал.
+Фиксировать ошибки и улучшать.
+
+        
 Архитектура проекта
 Компоненты системы:
 Мозг (GPT):
