--- a/index3.html
+++ b/index3.html
@@ -49,7 +49,9 @@
 Постоянное тестирование:
 После каждого этапа тестировать новый функционал.
 Фиксировать ошибки и улучшать.
+правила в разработке, чтобы ты вперед не спешил, схема следующая, ты написал  код - ждешь, пробую, кидаю резульатть ты затем лишь меняешь код и даешь мне новый, ато я не успеваю попробовать втой код и ыт лудше осмысленей рабоатй
 
+        
         
 Архитектура проекта
 Компоненты системы:
