--- a/index3.html
+++ b/index3.html
@@ -53,6 +53,47 @@
 правила в разработке, чтобы ты вперед не спешил, схема следующая, ты написал  код - ждешь, 
 пробую, кидаю резульатть ты затем лишь меняешь код и даешь мне новый, 
 ато я не успеваю попробовать втой код и ыт лудше осмысленей рабоатй
+**Контекст разработки проекта с джуниором**
+
+1. **Общий подход к разработке:**
+   - Каждая задача делится на микро-шаги.
+   - После выполнения каждого шага проводится тестирование.
+   - Описание результатов тестов фиксируется для дальнейшего анализа.
+   - Обратная связь предоставляется до внесения любых изменений в код.
+
+2. **Процесс взаимодействия:**
+   - Джуниор пишет и запускает код, фиксирует результаты отладки.
+   - Ментор предоставляет новый код только после анализа текущего результата.
+   - Все изменения объясняются подробно, чтобы улучшить понимание логики и подхода к разработке.
+
+3. **Шаги текущей задачи:**
+   - **Цель:** Подключение Selenium к существующему браузеру, где уже открыта нужная вкладка (чат).
+   - **Этапы:**
+     1. Настройка ChromeDriver с указанием порта и профиля для подключения.
+     2. Проверка подключения к открытому браузеру (использование метода `ConnectToExistingBrowser`).
+     3. Получение исходного кода страницы с помощью `_driver.PageSource` для анализа текущего состояния.
+     4. Настройка селекторов для работы с элементами чата (получение и отправка сообщений).
+
+4. **Текущие проблемы и шаги их решения:**
+   - **Проблема:** Элементы чата не находятся в DOM.
+     - Проверка: Вывод содержимого страницы через `Console.WriteLine(_driver.PageSource)`.
+     - Анализ корректности селекторов с использованием DevTools (CSS-селекторы).
+   - **Решение:**
+     1. Убедиться, что используется правильный порт отладки.
+     2. Проверить, что браузер запущен с нужным профилем и вкладкой.
+     3. Если элементы не находятся, уточнить селекторы, основываясь на структуре DOM.
+
+5. **Рекомендации для дальнейшей работы:**
+   - Всегда фиксировать результаты отладки (скриншоты, логи).
+   - Постоянно уточнять требования и цель каждой подзадачи.
+   - Использовать минимально необходимое время ожидания (например, `ImplicitWait`).
+   - Сохранять текущий контекст разработки для новых участников проекта.
+
+6. **Цели документа:**
+   - Сохранить полный контекст текущих этапов разработки.
+   - Упростить переход новым участникам в проект.
+   - Обеспечить ясное понимание текущего статуса и задач.
+
 
         
         
