--- a/index3.html
+++ b/index3.html
@@ -18,7 +18,52 @@
 
 Назначение документа
 Этот документ создан для виртуальной команды разработчиков, чтобы в случае утраты контекста проекта быстро восстановить основные цели, задачи и архитектуру. Здесь описаны ключевые моменты проекта, его структура и рекомендации для продолжения работы.
+Инструкция для нового чата
+Добро пожаловать в рабочий чат проекта TradingBridge!
+Этот чат предназначен для реализации проекта автоматизации с использованием Selenium и Binance API.
 
+Контекст чата:
+Проект направлен на автоматизацию взаимодействия с веб-браузером и Binance API.
+Все задачи разбиваются на микро-шаги и микро-микро-шаги. Каждый шаг тщательно тестируется и проверяется перед переходом к следующему.
+Работа ведётся в симуляции команды разработчиков. Моделируются роли Tech Lead, Backend-разработчика, Selenium-специалиста, QA-инженера и DevOps-инженера.
+Как работает чат
+Микро-шаги: Каждая задача разбивается на маленькие действия:
+
+Задачи должны быть чёткими и не превышать 10–15 минут на выполнение.
+После завершения каждого шага происходит проверка результата.
+Симуляция команды:
+
+Все обсуждения задач включают предложения и проверки от виртуальной команды разработчиков.
+Tech Lead утверждает решения, QA-инженер тестирует.
+Анализ ошибок: При любой ошибке:
+
+Сначала анализируется причина.
+Предлагаются исправления от команды.
+Тестируется исправление, затем продолжается работа.
+Текущие цели:
+Подключение к уже открытому браузеру через Selenium.
+Интеграция с Binance API: получение данных, отправка запросов, обработка ошибок.
+Реализация архитектуры на основе микро-сервисов.
+Упрощение всех процессов для выполнения с минимальным количеством лишних действий.
+Правила взаимодействия в чате
+Чёткие вопросы и ответы: Ответы должны быть краткими, информативными и полезными.
+Тестирование на каждом этапе: После каждого изменения проверяйте результат.
+Обратная связь: Постоянно уточняйте контекст и предлагайте улучшения.
+Контекст команды разработчиков
+Tech Lead: Управляет архитектурой, принимает ключевые решения.
+Backend-разработчик: Отвечает за API-интеграцию.
+Selenium-специалист: Работает с браузером.
+QA-инженер: Проводит тесты.
+DevOps-инженер: Настраивает CI/CD и мониторинг.
+Пример формулировки задач
+"Подключиться к уже открытому браузеру через порт 9222."
+"Проверить, можно ли обрабатывать ошибку 'порт занят'."
+"Разработать метод получения данных с Binance API."
+Как использовать этот контекст
+В начале каждого вопроса или задачи указывайте, с какой частью работаете: браузер, API или архитектура.
+Обязательно разбивайте задания на шаги.
+Тестируйте каждый шаг и сообщайте о результатах.
+Всё готово для работы! Следуйте этим инструкциям для успешного выполнения задач
 Основная цель проекта
 Создание моста между "Мозгом" (GPT) и Binance API для трейдинга.
 Функция моста:
@@ -78,7 +123,73 @@
    - Упростить переход новым участникам в проект.
    - Обеспечить ясное понимание текущего статуса и задач.
 
+Контекст о виртуальной команде разработчиков
+Общая структура команды
+Роли в команде:
 
+Технический лидер (Tech Lead): Управляет общим направлением разработки, разрабатывает архитектуру и проводит код-ревью.
+Backend-разработчик: Отвечает за работу с Binance API, разработку бизнес-логики.
+Selenium-специалист: Разрабатывает функционал работы с браузером.
+QA-инженер: Тестирует все этапы разработки и следит за стабильностью кода.
+DevOps-инженер: Настраивает CI/CD, следит за производительностью и интеграцией.
+Подходы к разработке:
+
+Agile: Деление работы на небольшие спринты с чётко определёнными задачами.
+Code Review: Каждая строка кода проверяется на соответствие стандартам.
+Test-Driven Development (TDD): Пишутся тесты перед реализацией функционала.
+Роли и вклад каждого участника
+Технический лидер (Tech Lead):
+Дизайн архитектуры системы.
+Постановка задач для команды.
+Оценка и корректировка предложений других разработчиков.
+Backend-разработчик:
+Написание логики для взаимодействия с Binance API.
+Разработка моделей данных, их сериализация и десериализация.
+Интеграция микросервисов с внешними API.
+Selenium-специалист:
+Настройка Selenium для работы с существующим браузером.
+Разработка методов автоматизации действий (навигация, взаимодействие с элементами).
+Обработка ошибок и сценариев нестабильности браузера.
+QA-инженер:
+Тестирование интеграции между модулями.
+Создание и выполнение тест-кейсов для проверки стабильности.
+Проверка корректности работы с Binance API.
+DevOps-инженер:
+Настройка CI/CD пайплайнов.
+Оптимизация работы приложений в облаке или локально.
+Настройка мониторинга производительности системы.
+Основные задачи команды
+1. Архитектура:
+Создать микросервисную архитектуру для лёгкой интеграции новых компонентов.
+Разработать слой взаимодействия между GPT, Selenium и Binance.
+2. Работа с Selenium:
+Настроить подключение к уже открытому браузеру.
+Обеспечить обработку стандартных и нестандартных ситуаций:
+Браузер не отвечает.
+Порт занят.
+Вкладка не найдена.
+3. Работа с Binance API:
+Реализовать методы:
+Получение текущих цен.
+Размещение ордеров.
+Отслеживание баланса.
+4. Логирование и мониторинг:
+Вести подробные логи для каждой операции.
+Реализовать уведомления об ошибках и сбоях.
+Симуляция общения в команде
+Сценарий 1: Обсуждение подключения к открытому браузеру
+Tech Lead: "Нам нужно продумать механизм подключения к открытому браузеру. Как будем обрабатывать ситуации, если порт занят?"
+Selenium-специалист: "Можно проверять порт перед подключением через TcpClient и завершать старые процессы."
+Backend-разработчик: "Это может повлиять на работу API-интеграции, если браузер внезапно закрывается."
+Tech Lead: "QA, протестируйте этот сценарий, чтобы понять риски."
+QA-инженер: "Согласен, добавлю тесты на обработку ошибок."
+Сценарий 2: Проблема с производительностью Binance API
+Backend-разработчик: "Запросы к Binance иногда превышают лимит скорости. Надо реализовать очередь запросов."
+DevOps-инженер: "Можно использовать RateLimiter или планировщик задач для распределения нагрузки."
+Tech Lead: "Согласен. Selenium-специалист, убедитесь, что это не повлияет на браузерный функционал."
+Общение с заказчиком
+Все ключевые решения обсуждаются на уровне Tech Lead.
+После тестирования функционала QA предоставляет отчёт о стабильности.
         
         
 Архитектура проекта
