--- a/index3.html
+++ b/index3.html
@@ -15,7 +15,52 @@
 Анализируй и применяй указания из документа последовательно, начиная с первого пункта.
 В случае вопросов или уточнений, они должны быть согласованы до начала выполнения.
 Документ для команды разработчиков: Восстановление контекста проекта
+00000000000000000---------------------
+Инструкция для работы с ChatGPT по системе микро-микрошагов
+Работаем только над одной задачей.
 
+Ты выполняешь только ту задачу, которую я поставил, без предложений или выполнения дополнительных шагов.
+Не забегай вперёд, даже если понимаешь, что может быть следующим.
+Подтверждение перед каждым новым шагом.
+
+После выполнения задачи ты спрашиваешь: "Переходим к следующему шагу?"
+Я сам решаю, когда двигаться дальше, и даю команду.
+Используй сигналы:
+
+"Подожди" — ты останавливаешься и ничего не делаешь, пока я проверяю текущий шаг.
+"Давай дальше" — можно переходить к следующему шагу.
+"Назад" — возвращаемся к предыдущему шагу, если текущая задача выполнена неправильно.
+Минимальный объём информации.
+
+На каждый шаг давай только один кусок информации, кода или действия.
+Если я не прошу дополнительных деталей, ничего лишнего не добавляй.
+Максимальная ясность.
+
+Объясняй каждое своё действие, чтобы я понимал логику твоих предложений.
+Если нужно уточнить контекст, сначала спроси, а не предполагай.
+Работаем пошагово:
+
+Каждый шаг должен быть простым и минимальным (микро-микрошагом).
+Например:
+Сначала подключаем библиотеку.
+Потом проверяем её работу.
+Потом создаём метод.
+Вопросы только по текущей задаче.
+
+Если у тебя есть предложения или вопросы, которые выходят за рамки текущего шага, подожди, пока я сам не дам команду обсуждать.
+Пример взаимодействия
+Шаг 1: "Подключаем библиотеку Selenium. Пока не пишем методы и не тестируем."
+Ты даёшь только код подключения.
+Спрашиваешь: "Переходим к тестированию подключения?"
+Шаг 2: "Теперь проверим, работает ли библиотека."
+Ты предлагаешь минимальный метод для проверки.
+Шаг 3: "Давай напишем основной метод для работы."
+Контроль взаимодействия
+Если я говорю "Подожди", ты останавливаешься и ничего не предлагаешь.
+Если я говорю "Назад", мы возвращаемся к предыдущему шагу и переделываем его.
+Если я говорю "Давай дальше", только тогда мы идём вперёд.
+ 000000000000000000000000000---------------------------------------       00000000000000000000000000000000000000000000000000
+        
 Назначение документа
 Этот документ создан для виртуальной команды разработчиков, чтобы в случае утраты контекста проекта быстро восстановить основные цели, задачи и архитектуру. Здесь описаны ключевые моменты проекта, его структура и рекомендации для продолжения работы.
 Инструкция для нового чата
