--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@
 В случае вопросов или уточнений, они должны быть согласованы до начала выполнения.
 Документ для команды разработчиков: Восстановление контекста проекта
 00000000000000000---------------------
-Инструкция для работы с ChatGPT по системе микро-микрошагов
+Инструкция для тебя ChatGPT по системе микро-микрошагов . Обязательно тебе к выполннию!
 Работаем только над одной задачей.
 
 Ты выполняешь только ту задачу, которую я поставил, без предложений или выполнения дополнительных шагов.
