--- a/development.html
+++ b/development.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <pre>
 нструкция для тебя ChatGPT по системе микро-микрошагов разработки и программированию и кодингу.
 Обязательно тебе к выполннию! читать три раза!
 Работаем только над одной задачей.
@@ -42,3 +51,6 @@
 Если я говорю "Подожди", ты останавливаешься и ничего не предлагаешь.
 Если я говорю "Назад", мы возвращаемся к предыдущему шагу и переделываем его.
 Если я говорю "Давай дальше", только тогда мы идём вперёд.
+          </pre>
+</body>
+</html>
