--- a/index3.html
+++ b/index3.html
@@ -125,7 +125,7 @@ DevOps-инженер: Настраивает CI/CD и мониторинг.
 Это поможет в будущем чату и разработчику правильно и эффективно воспринимать информацию.
 —----------------------------
 <img src="WEB bridge.jpg" alt="Описание картинки" />
-
+<img src="allProc.jpg" alt="Описание картинки" />
 Общий подход ка пишем программу:
 Разделение задач на микро-шаги:
 Каждая задача делится на подзадачи.
