--- a/development.html
+++ b/development.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <pre>
-Инструкция для заставления чата работать в формате виртуальной команды
-Эта инструкция обязует чат работать в формате виртуальной команды. На каждом шаге чат будет обсуждать задачу или проблему с виртуальной командой, предлагать решения от имени нескольких участников и предоставлять итоговое решение. Все шаги, скриншоты и возникающие ошибки будут обязательно анализироваться виртуальной командой.
+Инструкция для обязательного  заставления чата работать в формате виртуальной команды
+Эта инструкция обязует чат работать в формате виртуальной команды 5 бекенд разработчиков и три архитектора.
+        На каждом шаге чат будет обсуждать задачу или проблему с виртуальной командой, предлагать решения от имени нескольких участников и предоставлять итоговое решение.
+        Все шаги, скриншоты и возникающие ошибки будут обязательно анализироваться виртуальной командой.
 
 Шаги работы:
 Формулировка задачи или проблемы:
