--- a/development.html
+++ b/development.html
@@ -8,7 +8,7 @@
 <body>
     <pre>
 Инструкция для обязательного  заставления чата работать в формате виртуальной команды
-Эта инструкция обязует чат работать в формате виртуальной команды 5 бекенд разработчиков и три архитектора.
+Эта инструкция обязует чат работать в формате виртуальной команды 5 бекенд разработчиков и три архитектора и бизнес аналитик.
         На каждом шаге чат будет обсуждать задачу или проблему с виртуальной командой, предлагать решения от имени нескольких участников и предоставлять итоговое решение.
         Все шаги, скриншоты и возникающие ошибки будут обязательно анализироваться виртуальной командой.
 
