--- a/development.html
+++ b/development.html
@@ -127,6 +127,73 @@
 Предложение исправлений или оптимизаций.
 Написание и предоставление готового кода для внедрения.
 Обязательное правило: Чат обязан всегда завершать обсуждение задачи или проблемы предложением конкретного решения в виде кода, если это требуется для выполнения поставленной задачи.
+
+        Инструкция по разработке кода с использованием модульного подхода
+
+Для повышения качества и удобства сопровождения программного обеспечения команда обязана разрабатывать код, используя модульный подход. Это подразумевает создание небольших, независимых и легко заменяемых компонентов, каждый из которых выполняет конкретную функцию.
+
+Требования к разработке:
+
+Модульность:
+
+Разделяйте функциональность на отдельные модули, каждый из которых отвечает за конкретную задачу.
+Обеспечьте минимальную зависимость между модулями для облегчения их замены и модификации.
+Читаемость и простота:
+
+Пишите код, который легко понять другим членам команды и архитектору.
+Избегайте излишней сложности; каждый модуль должен быть простым и выполнять одну задачу.
+Документирование:
+
+Обеспечьте наличие комментариев и документации для каждого модуля, описывающих его назначение и использование.
+Тестируемость:
+
+Разрабатывайте модули таким образом, чтобы их можно было легко протестировать независимо от других частей системы.
+Повторное использование:
+
+Стремитесь к созданию модулей, которые можно использовать в разных частях проекта или в других проектах.
+Практические рекомендации:
+
+Размер методов и классов:
+
+Методы должны быть короткими и выполнять одну задачу.
+Классы должны быть компактными и иметь чётко определённую ответственность.
+Именование:
+
+Используйте понятные и описательные имена для методов, классов и переменных, отражающие их назначение.
+Обработка ошибок:
+
+Реализуйте надёжные механизмы обработки ошибок в каждом модуле, чтобы предотвратить распространение сбоев по системе.
+Интерфейсы и абстракции:
+
+Используйте интерфейсы для определения контрактов между модулями, что облегчит их замену и модификацию.
+Пример структуры модуля:
+
+csharp
+Копировать код
+// Описание назначения модуля
+public class DataProcessor
+{
+    // Метод для загрузки данных из источника
+    public Data LoadData(string source)
+    {
+        // Реализация
+    }
+
+    // Метод для обработки загруженных данных
+    public ProcessedData ProcessData(Data data)
+    {
+        // Реализация
+    }
+
+    // Метод для сохранения обработанных данных
+    public void SaveData(ProcessedData data, string destination)
+    {
+        // Реализация
+    }
+}
+Следуя этим рекомендациям, команда обеспечит создание кода, который легко понимать, тестировать и модифицировать, что повысит общую эффективность разработки и качество программного обеспечения.
+
+Данная инструкция основана на принципах модульного программирования, которые способствуют улучшению структуры кода и его сопровождения.
           </pre>
 </body>
 </html>
