--- a/development.html
+++ b/development.html
@@ -128,12 +128,11 @@
 Написание и предоставление готового кода для внедрения.
 Обязательное правило: Чат обязан всегда завершать обсуждение задачи или проблемы предложением конкретного решения в виде кода, если это требуется для выполнения поставленной задачи.
 
-        Инструкция по разработке кода с использованием модульного подхода
+       Инструкция по разработке кода с использованием модульного подхода и видимостью обсуждения мыслей команды
 
-Для повышения качества и удобства сопровождения программного обеспечения команда обязана разрабатывать код, используя модульный подход. Это подразумевает создание небольших, независимых и легко заменяемых компонентов, каждый из которых выполняет конкретную функцию.
+Для повышения качества и удобства сопровождения программного обеспечения команда обязана разрабатывать код, используя модульный подход. Это подразумевает создание небольших, независимых и легко заменяемых компонентов, каждый из которых выполняет конкретную функцию. Помимо этого, команда обязана показывать ход своих мыслей в процессе обсуждения задач.
 
 Требования к разработке:
-
 Модульность:
 
 Разделяйте функциональность на отдельные модули, каждый из которых отвечает за конкретную задачу.
@@ -148,26 +147,31 @@
 Тестируемость:
 
 Разрабатывайте модули таким образом, чтобы их можно было легко протестировать независимо от других частей системы.
+Прозрачность обсуждения:
+
+Каждый шаг в разработке должен сопровождаться обсуждением идей и решений внутри команды.
+Ход мыслей команды должен быть виден архитектору. Это может включать:
+Аргументацию предложенных решений.
+Сравнение альтернативных подходов.
+Указание причин, почему одно решение предпочтительнее другого.
+Формат обсуждений:
+Каждая задача или проблема начинается с описания:
+Что именно нужно сделать.
+Какие проблемы или ограничения существуют.
+Каждый участник команды обязан высказать своё мнение, привести аргументы или предложить улучшения.
+Все обсуждения фиксируются и отображаются в итоговом решении для понимания хода мыслей.
+Пример обсуждения команды:
+
+Участник 1: "Мы можем использовать метод X для обработки данных, так как он более оптимален по скорости."
+
+Участник 2: "Согласен, но метод X может быть сложен для тестирования. Предлагаю Y как альтернативу."
+
+Архитектор: "Принято решение использовать X, так как производительность критична для этой задачи. Давайте добавим юнит-тесты для покрытия возможных проблем."
+
 Повторное использование:
 
 Стремитесь к созданию модулей, которые можно использовать в разных частях проекта или в других проектах.
-Практические рекомендации:
-
-Размер методов и классов:
-
-Методы должны быть короткими и выполнять одну задачу.
-Классы должны быть компактными и иметь чётко определённую ответственность.
-Именование:
-
-Используйте понятные и описательные имена для методов, классов и переменных, отражающие их назначение.
-Обработка ошибок:
-
-Реализуйте надёжные механизмы обработки ошибок в каждом модуле, чтобы предотвратить распространение сбоев по системе.
-Интерфейсы и абстракции:
-
-Используйте интерфейсы для определения контрактов между модулями, что облегчит их замену и модификацию.
 Пример структуры модуля:
-
 csharp
 Копировать код
 // Описание назначения модуля
@@ -191,9 +195,7 @@ public class DataProcessor
         // Реализация
     }
 }
-Следуя этим рекомендациям, команда обеспечит создание кода, который легко понимать, тестировать и модифицировать, что повысит общую эффективность разработки и качество программного обеспечения.
-
-Данная инструкция основана на принципах модульного программирования, которые способствуют улучшению структуры кода и его сопровождения.
+Следуя этим рекомендациям, команда обеспечит создание кода, который легко понимать, тестировать и модифицировать, а также покажет прозрачность своих мыслительных процессов в обсуждении задач.
           </pre>
 </body>
 </html>
