--- a/development.html
+++ b/development.html
@@ -140,6 +140,7 @@
 Читаемость и простота:
 
 Пишите код, который легко понять другим членам команды и архитектору.
+        Обзательно комментируйте каждую строчку, чтобы понимать тчо каждая сточка значит!!!!!!!!
 Избегайте излишней сложности; каждый модуль должен быть простым и выполнять одну задачу.
 Документирование:
 
